--- a/public/login.html
+++ b/public/login.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TripCanvas - 로그인</title>
-    <link rel="stylesheet" href="../src/styles/login.css" />
-  </head>
-  <body>
-    <div class="login-container">
-      <div class="logo-section">
-        <div class="logo">🗺️</div>
-        <div class="logo-text">TripCanvas</div>
-        <div class="subtitle">나만의 여행을 캔버스에 그려보세요</div>
-      </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>TripCanvas - 로그인</title>
+        <link rel="stylesheet" href="../src/styles/login.css" />
+    </head>
+    <body>
+        <div class="login-container">
+            <div class="logo-section">
+                <div class="logo">🗺️</div>
+                <div class="logo-text">TripCanvas</div>
+                <div class="subtitle">나만의 여행을 캔버스에 그려보세요</div>
+            </div>
 
-      <div class="error-message" id="errorMessage">
-        아이디 또는 비밀번호가 올바르지 않습니다.
-      </div>
+            <div class="error-message" id="errorMessage">
+                아이디 또는 비밀번호가 올바르지 않습니다.
+            </div>
 
-      <form id="loginForm">
-        <div class="form-group">
-          <label>아이디 또는 이메일</label>
-          <input
-            type="text"
-            id="username"
-            placeholder="아이디 또는 이메일을 입력하세요"
-            required
-          />
+            <form id="loginForm">
+                <div class="form-group">
+                    <label>아이디 또는 이메일</label>
+                    <input
+                        type="text"
+                        id="username"
+                        placeholder="아이디 또는 이메일을 입력하세요"
+                        required
+                    />
+                </div>
+
+                <div class="form-group">
+                    <label>비밀번호</label>
+                    <input
+                        type="password"
+                        id="password"
+                        placeholder="비밀번호를 입력하세요"
+                        required
+                    />
+                </div>
+
+                <div class="form-options">
+                    <label class="remember-me">
+                        <input type="checkbox" id="rememberMe" />
+                        <span>로그인 상태 유지</span>
+                    </label>
+                    <a href="#" class="forgot-password">비밀번호 찾기</a>
+                </div>
+
+                <button type="submit" class="btn-login">로그인</button>
+            </form>
+
+            <div class="signup-link">
+                아직 계정이 없으신가요?
+                <a href="signup.html">회원가입</a>
+            </div>
+
+            <div class="divider">소개 페이지로 이동하기</div>
+
+            <div class="social-login">
+                <button
+                    class="social-btn"
+                    onclick="location.href='./intro.html'"
+                >
+                    🔍
+                </button>
+            </div>
         </div>
 
-        <div class="form-group">
-          <label>비밀번호</label>
-          <input
-            type="password"
-            id="password"
-            placeholder="비밀번호를 입력하세요"
-            required
-          />
-        </div>
-
-        <div class="form-options">
-          <label class="remember-me">
-            <input type="checkbox" id="rememberMe" />
-            <span>로그인 상태 유지</span>
-          </label>
-          <a href="#" class="forgot-password">비밀번호 찾기</a>
-        </div>
-
-        <button type="submit" class="btn-login">로그인</button>
-      </form>
-
-      <div class="signup-link">
-        아직 계정이 없으신가요?
-        <a href="#" onclick="location.href='signup.html'">회원가입</a>
-      </div>
-
-      <div class="divider">소개 페이지로 이동하기</div>
-
-      <div class="social-login">
-        <button class="social-btn" onclick="location.href='./intro.html'">
-          🔍
-        </button>
-      </div>
-    </div>
-
-    <script src="../src/pages/Login.mjs"></script>
-  </body>
+        <script
+            type="module"
+            src="../src/components/auth/LoginForm.js"
+        ></script>
+    </body>
 </html>
