express환경에선 src가 화면의 요소들을 블락한다고 해서 위치 옮겼습니다. main 수정

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TripCanvas - 대시보드</title>
-    <link rel="stylesheet" href="../src/styles/dashboard.css" />
+    <link rel="stylesheet" href="./styles/dashboard.css" />
   </head>
   <body>
     <!-- 네비게이션 -->
@@ -51,7 +51,7 @@
 
       <!-- 액션 버튼 -->
       <div class="action-buttons">
-        <button class="btn btn-primary" onclick="createTrip()">
+        <button class="btn btn-primary" onclick="location.href='/main.html'">
           ✨ 새 여행 만들기
         </button>
         <button class="btn btn-secondary" onclick="showBucketList()">
