--- a/public/detail.html
+++ b/public/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>서울-부산 미식 여행 - TripCanvas</title>
-    <link rel="stylesheet" href="../src/styles/detail.css" />
+    <link rel="stylesheet" href="./styles/detail.css" />
   </head>
   <body>
     <!-- 네비게이션 -->
