--- a/public/intro.html
+++ b/public/intro.html
@@ -1,215 +1,210 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TripCanvas - AI 기반 맞춤형 여행 플래너</title>
-        <link rel="stylesheet" href="../src/styles/intro.css" />
-    </head>
-    <body>
-        <!-- 네비게이션 -->
-        <div id="navbar"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TripCanvas - AI 기반 맞춤형 여행 플래너</title>
+    <link rel="stylesheet" href="./styles/intro.css" />
+  </head>
+  <body>
+    <!-- 네비게이션 -->
+    <div id="navbar"></div>
 
-        <!-- 히어로 섹션 -->
-        <section class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">
-                    AI가 만들어주는<br />
-                    나만의 완벽한 여행
-                </h1>
-                <p class="hero-subtitle">
-                    예산, 시간, 취향을 입력하면 Gemini AI가 최적의 경로를
-                    생성하고,<br />
-                    실시간으로 날씨와 교통을 반영해 여행을 더욱 완벽하게
-                    만듭니다
-                </p>
-                <div class="hero-buttons">
-                    <a
-                        href="#"
-                        class="btn btn-secondary"
-                        style="background: white; color: #3b82f6"
-                        onclick="goToSignup()"
-                    >
-                        ✨ 지금 시작하기
-                    </a>
-                    <a
-                        href="#features"
-                        class="btn btn-secondary"
-                        style="align-content: center; color: #3b82f6"
-                    >
-                        더 알아보기 →
-                    </a>
-                </div>
-                <div class="hero-stats">
-                    <div class="stat-item">
-                        <div class="stat-value">10,000+</div>
-                        <div class="stat-label">생성된 여행 계획</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-value">5,000+</div>
-                        <div class="stat-label">활성 사용자</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-value">98%</div>
-                        <div class="stat-label">만족도</div>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <!-- 히어로 섹션 -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">
+          AI가 만들어주는<br />
+          나만의 완벽한 여행
+        </h1>
+        <p class="hero-subtitle">
+          예산, 시간, 취향을 입력하면 Gemini AI가 최적의 경로를 생성하고,<br />
+          실시간으로 날씨와 교통을 반영해 여행을 더욱 완벽하게 만듭니다
+        </p>
+        <div class="hero-buttons">
+          <a
+            href="#"
+            class="btn btn-secondary"
+            style="background: white; color: #3b82f6"
+            onclick="goToSignup()"
+          >
+            ✨ 지금 시작하기
+          </a>
+          <a
+            href="#features"
+            class="btn btn-secondary"
+            style="align-content: center; color: #3b82f6"
+          >
+            더 알아보기 →
+          </a>
+        </div>
+        <div class="hero-stats">
+          <div class="stat-item">
+            <div class="stat-value">10,000+</div>
+            <div class="stat-label">생성된 여행 계획</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-value">5,000+</div>
+            <div class="stat-label">활성 사용자</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-value">98%</div>
+            <div class="stat-label">만족도</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        <!-- 기능 섹션 -->
-        <section class="section" id="features">
-            <div class="section-header">
-                <h2 class="section-title">강력한 AI 기반 기능</h2>
-                <p class="section-subtitle">
-                    최신 AI 기술과 실시간 데이터를 활용해 당신의 여행을 완벽하게
-                    계획하고 관리합니다
-                </p>
-            </div>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">🤖</div>
-                    <h3 class="feature-title">AI 맞춤 경로 생성</h3>
-                    <p class="feature-description">
-                        Gemini API가 당신의 취향, 예산, 시간을 분석해 최적의
-                        여행 경로를 자동으로 생성합니다
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3 class="feature-title">실시간 최적화</h3>
-                    <p class="feature-description">
-                        ADM-VRP 알고리즘이 날씨, 교통, 혼잡도를 실시간 반영해
-                        경로를 동적으로 재조정합니다
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">💰</div>
-                    <h3 class="feature-title">스마트 예산 관리</h3>
-                    <p class="feature-description">
-                        예산 제약 내에서 최고의 경험을 제공하는 장소를 추천하고
-                        지출을 실시간으로 추적합니다
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">✏️</div>
-                    <h3 class="feature-title">지도 위 메모</h3>
-                    <p class="feature-description">
-                        지도 위에 직접 메모를 작성하고 그림을 그려 나만의 여행
-                        캔버스를 완성하세요
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">👥</div>
-                    <h3 class="feature-title">실시간 협업</h3>
-                    <p class="feature-description">
-                        WebRTC 기반으로 동행자들과 실시간으로 채팅하고 화상
-                        통화하며 함께 계획을 세웁니다
-                    </p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎯</div>
-                    <h3 class="feature-title">여행 챌린지</h3>
-                    <p class="feature-description">
-                        버킷리스트를 설정하고 AI가 목표 달성을 위한 장소를
-                        우선적으로 추천합니다
-                    </p>
-                </div>
-            </div>
-        </section>
+    <!-- 기능 섹션 -->
+    <section class="section" id="features">
+      <div class="section-header">
+        <h2 class="section-title">강력한 AI 기반 기능</h2>
+        <p class="section-subtitle">
+          최신 AI 기술과 실시간 데이터를 활용해 당신의 여행을 완벽하게 계획하고
+          관리합니다
+        </p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-card">
+          <div class="feature-icon">🤖</div>
+          <h3 class="feature-title">AI 맞춤 경로 생성</h3>
+          <p class="feature-description">
+            Gemini API가 당신의 취향, 예산, 시간을 분석해 최적의 여행 경로를
+            자동으로 생성합니다
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">⚡</div>
+          <h3 class="feature-title">실시간 최적화</h3>
+          <p class="feature-description">
+            ADM-VRP 알고리즘이 날씨, 교통, 혼잡도를 실시간 반영해 경로를
+            동적으로 재조정합니다
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">💰</div>
+          <h3 class="feature-title">스마트 예산 관리</h3>
+          <p class="feature-description">
+            예산 제약 내에서 최고의 경험을 제공하는 장소를 추천하고 지출을
+            실시간으로 추적합니다
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">✏️</div>
+          <h3 class="feature-title">지도 위 메모</h3>
+          <p class="feature-description">
+            지도 위에 직접 메모를 작성하고 그림을 그려 나만의 여행 캔버스를
+            완성하세요
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">👥</div>
+          <h3 class="feature-title">실시간 협업</h3>
+          <p class="feature-description">
+            WebRTC 기반으로 동행자들과 실시간으로 채팅하고 화상 통화하며 함께
+            계획을 세웁니다
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">🎯</div>
+          <h3 class="feature-title">여행 챌린지</h3>
+          <p class="feature-description">
+            버킷리스트를 설정하고 AI가 목표 달성을 위한 장소를 우선적으로
+            추천합니다
+          </p>
+        </div>
+      </div>
+    </section>
 
-        <!-- 스크린샷 섹션 -->
-        <section class="section screenshots" id="screenshots">
-            <div class="section-header">
-                <h2 class="section-title">직관적인 인터페이스</h2>
-                <p class="section-subtitle">
-                    복잡한 여행 계획도 간단하게 관리할 수 있는 사용자 친화적인
-                    디자인
-                </p>
-            </div>
-            <div class="screenshot-container">
-                <div class="screenshot-img">🖼️</div>
-            </div>
-        </section>
+    <!-- 스크린샷 섹션 -->
+    <section class="section screenshots" id="screenshots">
+      <div class="section-header">
+        <h2 class="section-title">직관적인 인터페이스</h2>
+        <p class="section-subtitle">
+          복잡한 여행 계획도 간단하게 관리할 수 있는 사용자 친화적인 디자인
+        </p>
+      </div>
+      <div class="screenshot-container">
+        <div class="screenshot-img">🖼️</div>
+      </div>
+    </section>
 
-        <!-- CTA 섹션 -->
-        <section class="cta">
-            <h2 class="cta-title">지금 바로 시작하세요</h2>
-            <p class="cta-subtitle">
-                무료로 가입하고 AI가 만들어주는 완벽한 여행을 경험해보세요
-            </p>
-            <a
-                href="#"
-                class="btn btn-secondary"
-                style="
-                    background: white;
-                    color: #0ea5e9;
-                    font-size: 18px;
-                    padding: 16px 32px;
-                "
-                onclick="goToSignup()"
-            >
-                ✨ 무료로 시작하기
-            </a>
-        </section>
+    <!-- CTA 섹션 -->
+    <section class="cta">
+      <h2 class="cta-title">지금 바로 시작하세요</h2>
+      <p class="cta-subtitle">
+        무료로 가입하고 AI가 만들어주는 완벽한 여행을 경험해보세요
+      </p>
+      <a
+        href="#"
+        class="btn btn-secondary"
+        style="
+          background: white;
+          color: #0ea5e9;
+          font-size: 18px;
+          padding: 16px 32px;
+        "
+        onclick="goToSignup()"
+      >
+        ✨ 무료로 시작하기
+      </a>
+    </section>
 
-        <!-- 푸터 -->
-        <footer class="footer">
-            <div class="footer-content">
-                <div>
-                    <div class="footer-brand">🗺️ TripCanvas</div>
-                    <p class="footer-description">
-                        AI 기반 맞춤형 여행 플래너로<br />
-                        당신만의 완벽한 여행을 만들어보세요
-                    </p>
-                </div>
-                <div class="footer-section">
-                    <h3>제품</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">기능</a></li>
-                        <li><a href="#">요금제</a></li>
-                        <li><a href="#">API</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>회사</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">소개</a></li>
-                        <li><a href="#">블로그</a></li>
-                        <li><a href="#">채용</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>지원</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">도움말</a></li>
-                        <li><a href="#">문의하기</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                © 2025 TripCanvas. All rights reserved.
-            </div>
-        </footer>
-        <script type="module" src="../src/pages/Intro.mjs"></script>
-        <script>
-            function goToLogin() {
-                alert("로그인 페이지로 이동합니다!");
-                window.location.href = "login.html";
-            }
+    <!-- 푸터 -->
+    <footer class="footer">
+      <div class="footer-content">
+        <div>
+          <div class="footer-brand">🗺️ TripCanvas</div>
+          <p class="footer-description">
+            AI 기반 맞춤형 여행 플래너로<br />
+            당신만의 완벽한 여행을 만들어보세요
+          </p>
+        </div>
+        <div class="footer-section">
+          <h3>제품</h3>
+          <ul class="footer-links">
+            <li><a href="#">기능</a></li>
+            <li><a href="#">요금제</a></li>
+            <li><a href="#">API</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>회사</h3>
+          <ul class="footer-links">
+            <li><a href="#">소개</a></li>
+            <li><a href="#">블로그</a></li>
+            <li><a href="#">채용</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>지원</h3>
+          <ul class="footer-links">
+            <li><a href="#">도움말</a></li>
+            <li><a href="#">문의하기</a></li>
+            <li><a href="#">개인정보처리방침</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">© 2025 TripCanvas. All rights reserved.</div>
+    </footer>
+    <script type="module" src="../src/pages/Intro.mjs"></script>
+    <script>
+      function goToLogin() {
+        alert("로그인 페이지로 이동합니다!");
+        window.location.href = "login.html";
+      }
 
-            function goToSignup() {
-                alert("회원가입 페이지로 이동합니다!");
-                window.location.href = "signup.html";
-            }
+      function goToSignup() {
+        alert("회원가입 페이지로 이동합니다!");
+        window.location.href = "signup.html";
+      }
 
-            // navbar.html 동적 삽입
-            fetch("navbar.html")
-                .then((res) => res.text())
-                .then((html) => {
-                    document.getElementById("navbar").innerHTML = html;
-                });
-        </script>
-    </body>
+      // navbar.html 동적 삽입
+      fetch("navbar.html")
+        .then((res) => res.text())
+        .then((html) => {
+          document.getElementById("navbar").innerHTML = html;
+        });
+    </script>
+  </body>
 </html>
