--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TripCanvas - 프로필 관리</title>
-    <link rel="stylesheet" href="../src/styles/profile.css" />
+    <link rel="stylesheet" href="./styles/profile.css" />
   </head>
   <body>
     <!-- 네비게이션 -->
