절대경로 설정

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -209,7 +209,7 @@
       </div>
     </div>
 
-    <script type="module" src="../src/pages/Dashboard.mjs"></script>
+    <script type="module" src="./pages/Dashboard.mjs"></script>
     <script>
       function createTrip() {
         alert("새 여행 만들기 페이지로 이동합니다.");
