--- a/public/template.html
+++ b/public/template.html
@@ -216,7 +216,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="../src/pages/Template.mjs"></script>
+    <script type="module" src="./pages/Template.mjs"></script>
     <script>
       // 템플릿 사용
       function useTemplate(templateId) {
