--- a/public/bucketlist.html
+++ b/public/bucketlist.html
@@ -304,7 +304,7 @@
         </form>
       </div>
     </div>
-    <script type="module" src="../src/pages/Bucketlist.mjs"></script>
+    <script type="module" src="./pages/Bucketlist.mjs"></script>
     <script>
       // 모달 열기
       function openModal() {
