--- a/public/intro.html
+++ b/public/intro.html
@@ -187,7 +187,7 @@
       </div>
       <div class="footer-bottom">© 2025 TripCanvas. All rights reserved.</div>
     </footer>
-    <script type="module" src="../src/pages/Intro.mjs"></script>
+    <script type="module" src="./pages/Intro.mjs"></script>
     <script>
       function goToLogin() {
         alert("로그인 페이지로 이동합니다!");
