--- a/public/signup.html
+++ b/public/signup.html
@@ -111,7 +111,7 @@
 
       <div class="login-link">
         이미 계정이 있으신가요?
-        <a href="../src/pages/Signup.mjs">로그인</a>
+        <a href="login.html">로그인</a>
       </div>
     </div>
     <script type="module" src="./pages/Signup.mjs"></script>
