--- a/public/profile.html
+++ b/public/profile.html
@@ -63,7 +63,7 @@
             <div class="tab-content" id="accountTab">
                 <div class="settings-card">
                     <h2 class="card-title">👤 기본 정보</h2>
-                    <form>
+                    <form id="profileForm">
                         <div class="form-row">
                             <div class="form-group">
                                 <label>아이디</label>
@@ -71,18 +71,27 @@
                             </div>
                             <div class="form-group">
                                 <label>닉네임</label>
-                                <input type="text" value="김여행" />
+                                <input
+                                    type="text"
+                                    id="nickname"
+                                    value="김여행"
+                                />
                             </div>
                         </div>
                         <div class="form-group">
                             <label>이메일</label>
-                            <input type="email" value="travel@example.com" />
+                            <input
+                                type="email"
+                                id="email"
+                                value="travel@example.com"
+                            />
                         </div>
                         <div class="form-group">
                             <label>자기소개</label>
                             <textarea
                                 rows="4"
                                 placeholder="나를 소개하는 글을 작성해주세요"
+                                id="bio"
                             ></textarea>
                         </div>
                         <div class="form-actions">
@@ -98,28 +107,34 @@
 
                 <div class="settings-card">
                     <h2 class="card-title">🔒 비밀번호 변경</h2>
-                    <form>
+                    <form id="passwordForm">
                         <div class="form-group">
                             <label>현재 비밀번호</label>
                             <input
                                 type="password"
+                                id="currentPassword"
                                 placeholder="현재 비밀번호를 입력하세요"
                             />
                         </div>
+
                         <div class="form-group">
                             <label>새 비밀번호</label>
                             <input
                                 type="password"
+                                id="newPassword"
                                 placeholder="새 비밀번호를 입력하세요"
                             />
                         </div>
+
                         <div class="form-group">
                             <label>새 비밀번호 확인</label>
                             <input
                                 type="password"
+                                id="newPasswordConfirm"
                                 placeholder="새 비밀번호를 다시 입력하세요"
                             />
                         </div>
+
                         <div class="form-actions">
                             <button type="submit" class="btn btn-primary">
                                 비밀번호 변경
