회원 탈퇴 구현 끝

--- a/public/profile.html
+++ b/public/profile.html
@@ -149,7 +149,7 @@
                         계정을 삭제하면 모든 데이터가 영구적으로 삭제되며 복구할
                         수 없습니다.
                     </p>
-                    <button class="btn btn-danger">계정 삭제</button>
+                    <button class="btn btn-danger delBtn">계정 삭제</button>
                 </div>
             </div>
 
