--- a/public/detail.html
+++ b/public/detail.html
@@ -227,7 +227,7 @@
               <div class="budget-progress">
                 <div class="budget-progress-fill" style="width: 65%"></div>
               </div>
-              <div class="budget-label">총 사용 금액 / ₩800,000 (65%)</div>
+              <div class="budget-label">총 사용 금액 : ₩800,000 (65%)</div>
             </div>
 
             <div class="expense-list">
