--- a/public/main.html
+++ b/public/main.html
@@ -11,24 +11,13 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <!-- 헤더 -->
-    <header class="header">
-      <div class="header-left">
-        <div class="logo">🗺️ TripCanvas</div>
-        <div class="trip-title">서울-부산 2박 3일 여행</div>
-      </div>
-      <div class="header-right">
-        <div class="collab-users">
-          <div class="user-avatar" title="나">🧑</div>
-          <div class="user-avatar" title="김민수">김</div>
-          <div class="user-avatar" title="이지은">이</div>
-        </div>
-        <button class="btn btn-primary">💾 저장하기</button>
-        <button class="btn btn-secondary" id="logout-button">
-          🚪 로그아웃
-        </button>
-      </div>
-    </header>
+    <!-- 네비게이션 -->
+    <div id="navbar"></div>
+
+    <script type="module">
+      import { loadNavbar } from "./js/navbar.js";
+      loadNavbar();
+    </script>
 
     <!-- 메인 컨테이너 -->
     <div class="main-container">
@@ -77,6 +66,7 @@
                 <option value="전라남도">전라남도</option>
                 <option value="제주특별자치도">제주특별자치도</option>
               </select>
+
               <select name="sub-destination" id="sub-destination">
                 <option value="">세부지역을 선택하세요</option>
               </select>
@@ -119,6 +109,7 @@
             <div class="input-group">
               <label>총 예산</label>
               <div
+                id="total-budget"
                 style="
                   padding: 12px;
                   background: var(--primary);
@@ -128,7 +119,6 @@
                   font-weight: bold;
                   text-align: center;
                 "
-                id="total-budget"
               >
                 0원
               </div>
@@ -136,6 +126,8 @@
 
             <div class="input-group">
               <label>여행 스타일</label>
+
+              <!-- ✅ Main.mjs: travel-style-chips -->
               <div class="template-chips" id="travel-style-chips">
                 <div class="chip selected" data-value="맛집">🍜 맛집</div>
                 <div class="chip" data-value="역사/문화">🏛️ 역사/문화</div>
@@ -144,6 +136,8 @@
                 <div class="chip" data-value="쇼핑">🛍️ 쇼핑</div>
                 <div class="chip" data-value="캠핑">⛺ 캠핑</div>
               </div>
+
+              <!-- ✅ Main.mjs: selected-styles -->
               <input
                 type="hidden"
                 id="selected-styles"
@@ -152,6 +146,7 @@
               />
             </div>
 
+            <!-- ✅ Main.mjs: btn-generate -->
             <button class="btn-generate" id="btn-generate">
               ✨ AI로 경로 생성하기
             </button>
@@ -160,10 +155,16 @@
             <div style="margin-top: 24px">
               <div class="section-title">📍 추천 장소</div>
 
-              <!-- ✅ Day 탭 -->
+              <!-- ✅ Main.mjs: ai-day-tabs -->
               <div class="day-tabs" id="ai-day-tabs"></div>
 
-              <!-- ✅ Day별 장소 리스트 -->
+              <!-- ✅ Main.mjs: distance time -->
+              <div id="day-route-stats" class="day-route-stats"></div>
+
+              <!-- ✅ Main.mjs: 장소별 거리 시간 -->
+              <div id="segment-route-stats" class="day-route-stats"></div>
+
+              <!-- ✅ Main.mjs: ai-day-places -->
               <div id="ai-day-places"></div>
             </div>
           </div>
@@ -221,12 +222,15 @@
           <div class="tab-content" id="schedule-content">
             <div class="section-title">📊 일정 관리</div>
 
+            <!-- ✅ Main.mjs: add-schedule-btn -->
             <button class="btn-add-schedule" id="add-schedule-btn">
               ➕ 일정 추가하기
             </button>
 
             <div style="margin-top: 20px">
               <div class="section-title">📅 내 일정 목록</div>
+
+              <!-- ✅ Main.mjs: schedule-list -->
               <div class="schedule-list" id="schedule-list">
                 <div class="schedule-item">
                   <div class="schedule-info">
@@ -254,7 +258,7 @@
               </div>
             </div>
 
-            <!-- 일정 추가 폼 (숨김 상태) -->
+            <!-- ✅ Main.mjs: schedule-form + schedule-time/title/location + save/cancel -->
             <div
               id="schedule-form"
               style="
@@ -323,7 +327,9 @@
         </div>
 
         <div class="map-canvas">
+          <!-- ✅ Main.mjs: kakao-map -->
           <div id="kakao-map" style="width: 100%; height: 100%"></div>
+
           <div class="map-placeholder">
             <div class="map-placeholder-icon">🗺️</div>
             <div>AI로 경로를 생성하면 여기에 지도가 표시됩니다</div>
@@ -347,6 +353,7 @@
           <div class="panel-tab-content active" id="chat-content">
             <div class="section-title">💬 실시간 협업 채팅</div>
 
+            <!-- ✅ Main.mjs: chat-messages -->
             <div class="chat-messages" id="chat-messages">
               <div class="message">
                 <div class="message-author">김민수</div>
@@ -435,6 +442,7 @@
           </div>
         </div>
 
+        <!-- ✅ Main.mjs: chat-input / chat-send-btn / chat-input -->
         <div class="chat-input">
           <input
             type="text"
@@ -446,7 +454,7 @@
       </aside>
     </div>
 
-    <!-- 🔄 로딩 오버레이 -->
+    <!-- ✅ Main.mjs: loading-overlay -->
     <div id="loading-overlay" class="loading-overlay hidden">
       <div class="loading-box">
         <div class="spinner"></div>
