trip 서버 구축 중

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -60,9 +60,9 @@
                 <!-- <button class="btn btn-secondary" onclick="showBucketList()">
           📝 버킷리스트 관리
         </button> -->
-                <button class="btn btn-secondary" onclick="showTemplates()">
+                <!-- <button class="btn btn-secondary" onclick="showTemplates()">
                     🎨 템플릿 둘러보기
-                </button>
+                </button> -->
             </div>
 
             <!-- 탭 -->
