trip 데이터 리스트 렌더링(group by status)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,10 +68,14 @@
             <!-- 탭 -->
             <div class="tabs">
                 <button class="tab-btn active" data-tab="active">
-                    진행 중 (2)
+                    진행 중 (<span class="count">0</span>)
                 </button>
-                <button class="tab-btn" data-tab="planning">계획 중 (3)</button>
-                <button class="tab-btn" data-tab="completed">완료 (7)</button>
+                <button class="tab-btn" data-tab="planning">
+                    계획 중 (<span class="count">0</span>)
+                </button>
+                <button class="tab-btn" data-tab="completed">
+                    완료 (<span class="count">0</span>)
+                </button>
             </div>
 
             <!-- 여행 카드 그리드 -->
