--- a/public/main.html
+++ b/public/main.html
@@ -171,50 +171,18 @@
 
           <!-- 템플릿 탭 -->
           <div class="tab-content" id="template-content">
-            <div class="section-title">🎨 여행 템플릿</div>
+            <div class="section-title">🎨 내 여행 템플릿</div>
             <p
               style="
                 color: var(--text-light);
                 margin-bottom: 20px;
                 font-size: 14px;
               "
-            >
-              검증된 여행 템플릿을 선택하면 AI가 자동으로 경로를 생성합니다.
-            </p>
+            ></p>
 
-            <div class="template-grid">
-              <div class="template-card">
-                <div class="template-icon">🍜</div>
-                <div class="template-name">부산 미식 투어</div>
-                <div class="template-desc">
-                  자갈치 시장, 해운대 맛집 등 부산의 대표 음식을 맛보는 2박 3일
-                  코스
-                </div>
-              </div>
-
-              <div class="template-card">
-                <div class="template-icon">🏛️</div>
-                <div class="template-name">경주 역사 기행</div>
-                <div class="template-desc">
-                  불국사, 석굴암, 첨성대 등 신라 천년의 역사를 느끼는 1박 2일
-                </div>
-              </div>
-
-              <div class="template-card">
-                <div class="template-icon">🏖️</div>
-                <div class="template-name">제주 힐링 여행</div>
-                <div class="template-desc">
-                  아름다운 해변과 카페를 즐기는 여유로운 3박 4일 일정
-                </div>
-              </div>
-
-              <div class="template-card">
-                <div class="template-icon">⛰️</div>
-                <div class="template-name">강원도 겨울 여행</div>
-                <div class="template-desc">
-                  스키장과 눈꽃 축제를 즐기는 2박 3일 겨울 여행
-                </div>
-              </div>
+            <div id="my-trips-list" class="template-grid">
+              <!-- ✅ 내 여행 목록 렌더링 자리 (추가) -->
+              <div class="template-card"></div>
             </div>
           </div>
 
