내 여행에서 원하는 여행 경로 선택 추가

--- a/public/main.html
+++ b/public/main.html
@@ -25,7 +25,7 @@
       <aside class="sidebar">
         <div class="sidebar-tabs">
           <button class="tab active" data-tab="route">📍 경로</button>
-          <button class="tab" data-tab="template">🎨 템플릿</button>
+          <button class="tab" data-tab="template">🎨 내 여행</button>
           <button class="tab" data-tab="schedule">📊 일정</button>
         </div>
 
